--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
+    "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
+    "@mui/material": "^7.2.0",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
@@ -24,8 +25,10 @@
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "react-router": "^7.6.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zod": "^3.25.73"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
